--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,10 @@
       </div>
       <div class="header-control">
         <nav class="nav-list">
-          <li class="nav-list__item-home nav-list__item-home-active">
+          <li class="nav-list__item-home">
             <a
               href="#"
-              class="nav-list__link-home nav-list__link-home-accent link"
+              class="nav-list__link-home header-control__btn--focus link nav-list__link--selected"
               data-home
               >HOME</a
             >
@@ -22,7 +22,7 @@
           <li class="nav-list__item-library">
             <a
               href="#"
-              class="nav-list__link-library nav-list__link-library-accent link"
+              class="nav-list__link-library header-control__btn--focus link"
               data-library
               >MY LIBRARY</a
             >
@@ -30,13 +30,21 @@
         </nav>
         <div class="autorization">
           <div class="autorization-sign-in">
-            <button type="button" class="sign-in__button" data-sign-in>
+            <button
+              type="button"
+              class="sign-in__button header-control__btn--focus"
+              data-sign-in
+            >
               <span>SIGN IN</span><span class="google__sign-in"></span>
             </button>
           </div>
           <div class="autorization__log-in is-hidden backdrop">
             <span class="display-name"></span>
-            <button type="button" class="sign-in__button" data-sign-out>
+            <button
+              type="button"
+              class="sign-in__button header-control__btn--focus"
+              data-sign-out
+            >
               LOGOUT
             </button>
           </div>
