--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -139,7 +139,27 @@
     align-items: center;
   }
 }
-
+.nav-list__link--selected {
+  position: relative;
+  &::after {
+    content: '';
+    display: flex;
+    position: absolute;
+    bottom: -10px;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: $accent-color;
+  }
+}
+.header-control__btn--focus {
+  transition-duration: 300ms;
+  &:hover,
+  &:focus {
+    border-color: #ff001b;
+    color: $accent-color;
+  }
+}
 .search {
   margin-top: 54px;
   font-size: 14px;
