--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -14,9 +14,8 @@
           <li class="nav__item">
             <a href="./index.html" class="nav__link">HOME</a>
           </li>
-          <li class="nav__item">
-            <!-- todo створити ./my-library.html -->
-            <a href="#" class="nav__link nav__link--current">MY LIBRARY</a>
+          <li class="nav__item nav-list__item-home-active">
+            <a href="#" class="nav__link nav__link--current ">MY LIBRARY</a>
           </li>
         </ul>
       </nav>
