--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -71,7 +71,7 @@
         </button>
       </form>
 
-      <p class="hero__search-error visually-hidden">
+      <p class="hero__search-error is-hidden">
         Search result not successful. Enter the correct movie name and try
         again!
       </p>
